# beddit

./: README.md  beddit.toml  pyproject.toml
beddit/: config.py  main.py
