[tool.poetry]
name = "beddit"
version = "0.1.0"
description = ""
authors = ["Ben Kristinsson"]
license = "BSD-3-Clause-No-Military-License"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.24.1"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
