[tool.poetry]
name = "beddit"
version = "0.1.0"
description = ""
authors = ["Ben Kristinsson"]
license = "BSD-3-Clause-No-Military-License"

[tool.poetry.dependencies]
python = "^3.7"
pybluez = {git = "https://github.com/pybluez/pybluez", rev = "0.23"}
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
beddit = "beddit.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
